--- a/src/stosa_preprocess.ipynb
+++ b/src/stosa_preprocess.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "pfOzpdBdOIKK"
       },
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "dgjpNt91AZPN"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -54,9 +54,9 @@
           "height": 112
         },
         "id": "kifGGxinGiH2",
-        "outputId": "b1dad236-0754-4ccb-c962-f69f8b3789a0"
+        "outputId": "556f1a40-bb9a-45ce-b6c8-3227f313d6cf"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1d4c69ed-8a8a-4d53-ad59-5f2ea356e2ec\">\n",
+              "  <div id=\"df-3dffb6f2-2210-4ca8-b2a6-423a54a36634\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -125,7 +125,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1d4c69ed-8a8a-4d53-ad59-5f2ea356e2ec')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3dffb6f2-2210-4ca8-b2a6-423a54a36634')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -176,12 +176,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1d4c69ed-8a8a-4d53-ad59-5f2ea356e2ec button.colab-df-convert');\n",
+              "          document.querySelector('#df-3dffb6f2-2210-4ca8-b2a6-423a54a36634 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1d4c69ed-8a8a-4d53-ad59-5f2ea356e2ec');\n",
+              "          const element = document.querySelector('#df-3dffb6f2-2210-4ca8-b2a6-423a54a36634');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -204,7 +204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 7
         }
       ]
     },
@@ -220,9 +220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgmGtIk3F6pP",
-        "outputId": "e1aaba0f-1557-4298-d092-eafd5ca429eb"
+        "outputId": "c6100ba7-23ba-4327-b5b5-343945840a25"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
         "\n",
         "  else:\n",
         "    print('\\n\\n----')\n",
-        "    print('Obtained 10-core subset')\n",
+        "    print('Obtained 40-core subset')\n",
         "    break"
       ],
       "metadata": {
@@ -271,9 +271,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hqxfKZsuAWNh",
-        "outputId": "a84eb059-cb7c-4c46-f771-542023bc7024"
+        "outputId": "5619c144-d5d5-4cda-8e5f-4a8b89bed76c"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +285,7 @@
             "\n",
             "\n",
             "----\n",
-            "Obtained 10-core subset\n"
+            "Obtained 40-core subset\n"
           ]
         }
       ]
@@ -293,7 +293,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'After taking 10-core subset:\\n\\n')\n",
+        "print(f'After taking 40-core subset:\\n\\n')\n",
         "print(f'No. of transactions: {transactions.shape[0]:,}. Decreased by {100*(31788324 - transactions.shape[0])/31788324:.2f}%')\n",
         "print(f'No. of users: {transactions.customer_id.nunique():,}. Decreased by {100*(1362281 - transactions.customer_id.nunique())/1362281:.2f}%')\n",
         "print(f'No. of articles: {transactions.article_id.nunique():,}. Decreased by {100*(104547 - transactions.article_id.nunique())/104547:.2f}%')\n"
@@ -302,16 +302,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hfbH6-qSF5Ks",
-        "outputId": "19e917f9-af23-41b3-c1c5-96752f723a06"
+        "id": "W0foSZx4JuHV",
+        "outputId": "c1c70386-4a76-47e2-bf76-183f9de4bd63"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "After taking 10-core subset:\n",
+            "After taking 40-core subset:\n",
             "\n",
             "\n",
             "No. of transactions: 19,208,040. Decreased by 39.58%\n",
@@ -488,7 +488,7 @@
         "    nfeedback = len(User[user])\n",
         "\n",
         "    if nfeedback < 10:\n",
-        "        print('Error in taking 10-core')\n",
+        "        print('Error in taking k-core')\n",
         "        break\n",
         "    else:\n",
         "        user_train[user] = User[user][:-2]\n",
