--- a/src/stosa_preprocess.ipynb
+++ b/src/stosa_preprocess.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "pfOzpdBdOIKK"
       },
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "dgjpNt91AZPN"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -54,9 +54,9 @@
           "height": 112
         },
         "id": "kifGGxinGiH2",
-        "outputId": "556f1a40-bb9a-45ce-b6c8-3227f313d6cf"
+        "outputId": "766ede02-cf19-4884-c393-1d8383058cc0"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3dffb6f2-2210-4ca8-b2a6-423a54a36634\">\n",
+              "  <div id=\"df-e242dc33-6b75-455d-bbcc-fc5f224940ed\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -125,7 +125,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3dffb6f2-2210-4ca8-b2a6-423a54a36634')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e242dc33-6b75-455d-bbcc-fc5f224940ed')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -176,12 +176,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3dffb6f2-2210-4ca8-b2a6-423a54a36634 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e242dc33-6b75-455d-bbcc-fc5f224940ed button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3dffb6f2-2210-4ca8-b2a6-423a54a36634');\n",
+              "          const element = document.querySelector('#df-e242dc33-6b75-455d-bbcc-fc5f224940ed');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -204,7 +204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -220,9 +220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgmGtIk3F6pP",
-        "outputId": "c6100ba7-23ba-4327-b5b5-343945840a25"
+        "outputId": "3a1b25e7-fb3d-46f2-9357-3aa91ef6dc1c"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
         "    counts = transactions['article_id'].value_counts()\n",
         "\n",
         "    for val in list(transactions['article_id'].unique()):\n",
-        "      if counts[val] < 40:\n",
+        "      if counts[val] < 25:\n",
         "        leastReviewedProducts.append(val)\n",
         "\n",
         "    transactions = transactions[~(transactions['article_id'].isin(leastReviewedProducts))]\n",
@@ -255,7 +255,7 @@
         "    counts = transactions['customer_id'].value_counts()\n",
         "\n",
         "    for val in list(transactions['customer_id'].unique()):\n",
-        "      if counts[val] < 40:\n",
+        "      if counts[val] < 25:\n",
         "        leastReviewsBy.append(val)\n",
         "\n",
         "    transactions = transactions[~(transactions['customer_id'].isin(leastReviewsBy))]\n",
@@ -263,7 +263,7 @@
         "\n",
         "  else:\n",
         "    print('\\n\\n----')\n",
-        "    print('Obtained 40-core subset')\n",
+        "    print('Obtained 25-core subset')\n",
         "    break"
       ],
       "metadata": {
@@ -271,21 +271,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hqxfKZsuAWNh",
-        "outputId": "5619c144-d5d5-4cda-8e5f-4a8b89bed76c"
+        "outputId": "d5b64137-ddf1-46e1-f13b-54fb873d861f"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Removed articles\t\t\t Remaining number of transactions: 31,214,804\n",
-            "Removed customers\t\t\t Remaining number of transactions: 19,470,398\n",
-            "Removed articles\t\t\t Remaining number of transactions: 19,208,040\n",
+            "Removed articles\t\t\t Remaining number of transactions: 31,473,449\n",
+            "Removed customers\t\t\t Remaining number of transactions: 23,962,677\n",
+            "Removed articles\t\t\t Remaining number of transactions: 23,856,203\n",
             "\n",
             "\n",
             "----\n",
-            "Obtained 40-core subset\n"
+            "Obtained 25-core subset\n"
           ]
         }
       ]
@@ -293,7 +293,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'After taking 40-core subset:\\n\\n')\n",
+        "print(f'After taking 25-core subset:\\n\\n')\n",
         "print(f'No. of transactions: {transactions.shape[0]:,}. Decreased by {100*(31788324 - transactions.shape[0])/31788324:.2f}%')\n",
         "print(f'No. of users: {transactions.customer_id.nunique():,}. Decreased by {100*(1362281 - transactions.customer_id.nunique())/1362281:.2f}%')\n",
         "print(f'No. of articles: {transactions.article_id.nunique():,}. Decreased by {100*(104547 - transactions.article_id.nunique())/104547:.2f}%')\n"
@@ -302,21 +302,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "W0foSZx4JuHV",
-        "outputId": "c1c70386-4a76-47e2-bf76-183f9de4bd63"
+        "id": "QgcPQ03jMFeP",
+        "outputId": "f3ee9511-3d35-4da5-f2be-31dbedaee2cd"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "After taking 40-core subset:\n",
+            "After taking 25-core subset:\n",
             "\n",
             "\n",
-            "No. of transactions: 19,208,040. Decreased by 39.58%\n",
-            "No. of users: 226,844. Decreased by 83.35%\n",
-            "No. of articles: 51,960. Decreased by 50.30%\n"
+            "No. of transactions: 23,856,203. Decreased by 24.95%\n",
+            "No. of users: 365,193. Decreased by 73.19%\n",
+            "No. of articles: 63,768. Decreased by 39.01%\n"
           ]
         }
       ]
@@ -331,7 +331,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_rn_YemxCTUa",
-        "outputId": "d6df612f-a9a4-4307-876d-8c708ae232fc"
+        "outputId": "94ac6c12-3068-4aa2-b4d7-5d3707620a9d"
       },
       "execution_count": null,
       "outputs": [
@@ -339,13 +339,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "90d392165c0d9482170ea7007bf2649d1b3db76e84e51c685260dac993d882ae    16\n",
-              "42a086d1fa81bec1ac3a9733dcf46ca2e432d299cf67fd9698912bbe8a9533f9    13\n",
+              "67a3dfe65332c2832212fbac37dbf8ebe92f037a9c56be6ba46475606fc71231    12\n",
+              "9b062e1f17b13e4d2ad2ec1fbcf6a3f6c489061eea66d34fa8a56cd9fd5caafd    12\n",
               "Name: customer_id, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 20
         }
       ]
     },
@@ -359,7 +359,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GzrEFBdaDFwT",
-        "outputId": "cb505be9-47bd-4789-8253-ee695558711f"
+        "outputId": "3eff6414-ea4b-49ac-9813-c66ff62cfee7"
       },
       "execution_count": null,
       "outputs": [
@@ -367,13 +367,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "657304002    40\n",
-              "676503002    40\n",
+              "553873033    25\n",
+              "652057001    25\n",
               "Name: article_id, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 21
         }
       ]
     },
@@ -431,7 +431,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61204765-b09b-4980-ed18-0b2de42ac015"
+        "outputId": "1fef4ae6-e1bc-4959-8bab-aa7a48e2f837"
       },
       "execution_count": null,
       "outputs": [
@@ -439,7 +439,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 19208040/19208040 [19:15<00:00, 16617.37it/s]\n"
+            "100%|██████████| 23856203/23856203 [23:55<00:00, 16622.38it/s]\n"
           ]
         }
       ]
@@ -447,10 +447,8 @@
     {
       "cell_type": "code",
       "source": [
-        "imap_file = str(f'{PROCESSED}')+'/imap.json'\n",
-        "umap_file = str(f'{PROCESSED}')+'/umap.json'\n",
-        "\n",
-        "data_file = str(f'PROCESSED')+'.txt'\n",
+        "imap_file = str(f'{PROCESSED}')+'/imap2.json'\n",
+        "umap_file = str(f'{PROCESSED}')+'/umap2.json'\n",
         "\n",
         "with open(imap_file, 'w') as f:\n",
         "    json.dump(itemmap, f)\n",
@@ -488,7 +486,7 @@
         "    nfeedback = len(User[user])\n",
         "\n",
         "    if nfeedback < 10:\n",
-        "        print('Error in taking k-core')\n",
+        "        print('Error in taking 10-core')\n",
         "        break\n",
         "    else:\n",
         "        user_train[user] = User[user][:-2]\n",
@@ -506,11 +504,11 @@
     {
       "cell_type": "code",
       "source": [
-        "train_file = str(f'{PROCESSED}')+'/train.txt'\n",
-        "valid_file = str(f'{PROCESSED}')+'/valid.txt'\n",
-        "test_file = str(f'{PROCESSED}')+'/test.txt'\n",
+        "train_file = str(f'{PROCESSED}')+'/train2.txt'\n",
+        "valid_file = str(f'{PROCESSED}')+'/valid2.txt'\n",
+        "test_file = str(f'{PROCESSED}')+'/test2.txt'\n",
         "\n",
-        "data_file = str(f'{PROCESSED}')+'/transactions_train_sequences.txt'\n",
+        "data_file = str(f'{PROCESSED}')+'/transactions_train_sequences2.txt'\n",
         "\n",
         "def writetofile(data, dfile):\n",
         "    with open(dfile, 'w') as f:\n",
@@ -542,22 +540,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "efc9b61d-978f-4bcf-95c9-dd6a63eac9b9"
+        "outputId": "400739eb-0357-4d83-fc50-b0de64602f13"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "total user:  226844\n",
-            "total instances:  19208040\n",
-            "avg length:  84.67510712207508\n",
-            "total items:  51961\n",
-            "density:  0.0016295896368829523\n",
-            "valid #users:  226844\n",
-            "valid instances:  226844\n",
-            "test #users:  226844\n",
-            "test instances:  226844\n"
+            "total user:  365193\n",
+            "total instances:  23856203\n",
+            "avg length:  65.324918604683\n",
+            "total items:  63769\n",
+            "density:  0.001024399294401402\n",
+            "valid #users:  365193\n",
+            "valid instances:  365193\n",
+            "test #users:  365193\n",
+            "test instances:  365193\n"
           ]
         }
       ],
@@ -582,17 +580,6 @@
         ""
       ],
       "metadata": {
-        "id": "tZtZsvqdNM3M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
         "id": "wBX8nJFoNNBk"
       },
       "execution_count": null,
@@ -603,7 +590,7 @@
     "accelerator": "GPU",
     "colab": {
       "machine_shape": "hm",
-      "name": "preprocess_stosa_curr.ipynb",
+      "name": "preprocess_stosa3.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
